src/components/datagrid/_data_grid.scss
.euiDataGrid {
  display: flex;
  flex-direction: column;
  align-items: stretch;
  overflow: hidden;
  height: 100%;
}

.euiDataGrid--fullScreen {
  height: 100%;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: $euiZDataGrid;
  background: $euiColorEmptyShade;

  .euiDataGrid__pagination {
    padding-bottom: $euiSizeXS;
    background: $euiColorLightestShade;
    border-top: $euiBorderThin;
  }
}

.euiDataGrid__content {
  flex-grow: 1;
  height: 100%;
  max-width: 100%;
  width: 100%;
  overflow: hidden;
  z-index: 2; // Sits above the pagination below it, but below the controls above it
  position: relative;
  background: $euiColorEmptyShade;
  font-feature-settings: 'tnum' 1; // Tabular numbers
}

.euiDataGrid__pagination {
  padding-top: $euiSizeXS;
  flex-grow: 0;
}

// This is used to remove extra scrollbars on the body when fullscreen is enabled
.euiDataGrid__restrictBody {
  height: 100vh;
  overflow: hidden;

  .euiHeader {
    z-index: $euiZHeaderBelowDataGrid;
  }
}


.euiDataGrid__controlScroll {
  @include euiYScrollWithShadows;
  max-height: $euiDataGridPopoverMaxHeight;
  padding: $euiSizeS;
  margin: -$euiSizeS; // Offset against the panel to make the scrollbar flush scrollbars
}

.euiDataGrid__focusWrap {
  height: 100%;
}

.euiDataGrid__virtualized {
  @include euiScrollBar($euiColorDarkShade, $euiColorEmptyShade);
  scroll-padding: 0;
}

.euiDataGrid__scrollOverlay {
  position: absolute;
  top: -1 * $euiBorderWidthThin; // Overlaps the toolbar border
  right: 0;
  bottom: 0;
  left: 0;

  // Ensure the underlying grid is still interactable
  pointer-events: none;

  // Ensure the scrolling data grid body always has border edges
  // regardless of cell position
  box-shadow: inset 0 0 0 $euiBorderWidthThin $euiBorderColor;
  // Note that this *must* be an inset `box-shadow` and not `border`, because
  // border will affect the relative position of the child scroll bar overlays
  // and cause them to be off by the width of the border

  // For grids with horizontal-only borders, only render a bottom 'border'
  .euiDataGrid--bordersHorizontal & {
    box-shadow: inset 0 (-2 * $euiBorderWidthThin) 0 (-1 * $euiBorderWidthThin) $euiBorderColor;
  }

  // Ensure the horizontal scrollbar has a top border
  .euiDataGrid__scrollBarOverlayBottom {
    position: absolute;
    width: 100%;
    height: $euiBorderWidthThin;
    background-color: $euiBorderColor;
  }

  // Ensure the vertical scrollbar has a left border
  .euiDataGrid__scrollBarOverlayRight {
    position: absolute;
    height: 100%;
    width: $euiBorderWidthThin;
    background-color: $euiBorderColor;
  }

  // Note: Scroll bar border positions are set via JS inline style, since
  // JS has access to the exact OS scrollbar width/height and CSS doesn't
}

